fix(potion.scss): remove bg-cover to prevent sprite overflow

--- a/src/components/Potion/potion.scss
+++ b/src/components/Potion/potion.scss
@@ -23,11 +23,9 @@
 
   &-empty {
     background-image: url("img/potions_empty.png");
-    background-size: cover;
   }
 
   &-filled {
     background-image: url("img/potions_filled.png");
-    background-size: cover;
   }
 }
